[ADD]start page animation

--- a/src/styles/color_scheme.scss
+++ b/src/styles/color_scheme.scss
@@ -75,12 +75,12 @@ $teal_5: #0ca678;
 $teal_6: #087f5b;
 
 //grean
-$grean_1: #ebfbee;
-$grean_2: #b2f2bb;
-$grean_3: #69db7c;
-$grean_4: #51cf66;
-$grean_5: #37b24d;
-$grean_6: #2b8a3e;
+$green_1: #ebfbee;
+$green_2: #b2f2bb;
+$green_3: #69db7c;
+$green_4: #51cf66;
+$green_5: #37b24d;
+$green_6: #2b8a3e;
 
 //lime
 $lime_1: #f4fce3;
