--- a/src/components/Common/Button/Button.scss
+++ b/src/components/Common/Button/Button.scss
@@ -3,7 +3,14 @@
     padding: 1rem;
     background-color: $gray_6;
     color: $white_1;
+    cursor: pointer;
+    border-radius: 10px;
+    user-select: none;
     &:hover {
         box-shadow: $gray_5 1.95px 1.95px 2.6px;
+    }
+    &:active {
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+            rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     }
 }
