--- a/src/components/Start/Start.scss
+++ b/src/components/Start/Start.scss
@@ -12,7 +12,7 @@
     background-color: $white_2;
     font-family: AppleSDGothicNeoM;
     &_sloganDiv {
-        height: 80vh;
+        height: 100vh;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
             rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         background-image: url(../../assets/images/intro_2.jpeg);
@@ -38,8 +38,27 @@
             font-size: 44px;
         }
     }
+    &_sloganDiv::after {
+        content: "👇";
+        position: absolute;
+        bottom: 40px;
+        font-size: 60px;
+        animation: bounce_frames 1s infinite;
+    }
     &_getStartDiv {
-        height: 50vh;
+        height: 100vh;
         @include flexBoxCenterSort();
+    }
+}
+
+@keyframes bounce_frames {
+    0% {
+        transform: translate3d(0, 0, 0);
+    }
+    50% {
+        transform: translate3d(0, 30px, 0);
+    }
+    100% {
+        transform: translate3d(0, 0, 0);
     }
 }
