--- a/src/components/Common/NavBar/NavBar.scss
+++ b/src/components/Common/NavBar/NavBar.scss
@@ -7,7 +7,7 @@
 
 .NavBar {
     width: 100%;
-    position: absolute;
+    position: fixed;
     background: rgba(255, 255, 255, 0.5);
     width: 100%;
     padding: 2rem 0rem 2rem 0rem;
