--- a/src/components/Common/NavBar/NavBar.scss
+++ b/src/components/Common/NavBar/NavBar.scss
@@ -1,4 +1,5 @@
 @import "styles/color_scheme.scss";
+
 @mixin flexBoxCenterSort {
     display: flex;
     justify-content: center;
@@ -6,19 +7,30 @@
 }
 
 .NavBar {
+    position: relative;
     width: 100%;
-    position: fixed;
-    background: rgba(255, 255, 255, 0.5);
-    width: 100%;
-    padding: 2rem 0rem 2rem 0rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-direction: column;
     &_links {
+        display: flex;
+        justify-content: flex-end;
         list-style: none;
+        padding: 1rem;
+        background: rgba(255, 255, 255, 0.5);
         &_icon {
             margin-right: 2rem;
             cursor: pointer;
         }
+    }
+
+    &_navigator {
+        width: 100%;
+        height: 10vh;
+        background-color: $gray_5;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
     }
 }
 
@@ -30,4 +42,12 @@
 }
 .instagram {
     color: $gray_6;
+}
+
+.link {
+    list-style: none;
+    padding: 1rem;
+    color: $white_2;
+    border-radius: 10px;
+    text-decoration: none;
 }
