--- a/src/components/Start/Start.scss
+++ b/src/components/Start/Start.scss
@@ -12,24 +12,37 @@
     background-color: $white_2;
     font-family: AppleSDGothicNeoM;
     &_sloganDiv {
+        width: 100%;
         height: 100vh;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
             rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        background-image: url(../../assets/images/intro_2.jpeg);
+        background-image: url(../../assets/images/intro_3.jpeg);
         background-repeat: no-repeat;
         background-size: cover;
         @include flexBoxCenterSort();
         text-align: center;
         line-height: 2rem;
         background-attachment: fixed;
+        &_slogan {
+            width: 500px;
+            height: 200px;
+            padding: 1rem;
+            // box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+            //     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+            // background-color: $white_2;
+            @include flexBoxCenterSort();
+            animation: slideContent 1s;
+            border-radius: 20px;
+            margin-left: 500px;
+        }
         h1 {
-            text-shadow: 3px 3px 20px $blue_6 -2px 1px 30px #ff99cc;
-
-            font-size: 28px;
+            font-size: 36px;
             color: $gray_6;
             cursor: default;
             user-select: none;
+            display: block;
             font-weight: bold;
+            position: absolute;
         }
         &_name {
             font-size: 36px;
@@ -46,11 +59,20 @@
         position: absolute;
         bottom: 40px;
         font-size: 60px;
-        animation: bounce_frames 1s infinite;
+        animation: bounce_frames 0.5s infinite;
     }
     &_getStartDiv {
         height: 100vh;
         @include flexBoxCenterSort();
+    }
+}
+
+@keyframes slideContent {
+    0% {
+        transform: translate3d(100%, 0, 0);
+    }
+    100% {
+        transform: translate3d(0, 0, 0);
     }
 }
 
