--- a/src/components/Main/ProjectCard/ProjectCard.scss
+++ b/src/components/Main/ProjectCard/ProjectCard.scss
@@ -1,4 +1,19 @@
 @import "styles/color_scheme.scss";
+
+@mixin hoverScaling {
+    transition: ease-in-out 0.3s;
+    &:hover {
+        transform: scale(1.03);
+    }
+    a {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.nothing::after {
+    content: "조금 더 분발해보도록  할게요...!😖";
+}
 .projectCard {
     width: 400px;
     height: 500px;
@@ -8,6 +23,7 @@
     padding: 1rem;
     flex-direction: column;
     margin-bottom: 2rem;
+    font-family: AppleSDGothicNeoM;
     &_name {
         font-weight: bold;
         font-size: 20px;
