--- a/src/components/Main/Projects/Projects.scss
+++ b/src/components/Main/Projects/Projects.scss
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    font-family: AppleSDGothicNeoM;
     &_selectDiv {
         display: flex;
         flex-direction: column;
