--- a/src/components/Start/Start.scss
+++ b/src/components/Start/Start.scss
@@ -16,9 +16,9 @@
         height: 100vh;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
             rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        background-image: url(../../assets/images/intro_5.jpg);
+        background-image: url(../../assets/images/intro_3.jpeg);
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         @include flexBoxCenterSort();
         text-align: center;
         line-height: 2rem;
