--- a/src/components/Main/ProjectCard/ProjectCard.scss
+++ b/src/components/Main/ProjectCard/ProjectCard.scss
@@ -60,7 +60,7 @@
             padding: 3px;
         }
         &::before {
-            content: "기술 스택 : ";
+            content: "기술 스택";
             font-weight: bold;
         }
     }
